// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> component should render a span html element with the given content 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #008DFC;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="informative"
    data-testid="counter"
  >
    Active
  </span>
</div>
`;

exports[`<Counter /> component should render outlined counter with secondary color 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #7C7C7D;
  border: 2px solid #7C7C7D;
  color: #7C7C7D;
  background-color: #FFFFFF;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="secondary"
    data-testid="counter"
  >
    Active
  </span>
</div>
`;
